objects/Country__c.object
<CustomObject>
    <description>SFDC1-402 Country object serves as a lookup for other standard objects (Account, Contact, etc...) Country object contains attributes for business use in reporting and validation against countries.</description>
    <fields>
        <fullName>CapiqCountry__c</fullName>
        <description>SFDC-5560 This field is used to match country with CAPIQ country</description>
        <label>Capiq Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <description>SFDC1-620 2-digit ISO code</description>
        <inlineHelpText>Please enter Country/Territory Code</inlineHelpText>
        <label>Country/Territory Code</label>
        <length>2</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>SFDC1-620 Specify Country&apos;s geography</description>
        <inlineHelpText>Please select Country&apos;s geography</inlineHelpText>
        <label>Geography</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia &amp; NZ</fullName>
                </value>
                <value>
                    <fullName>Benelux</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Caribbean</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Eastern Europe</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany/Austria/Switzerland</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Middle East &amp; Africa</fullName>
                </value>
                <value>
                    <fullName>Nordics</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Southern Europe</fullName>
                </value>
                <value>
                    <fullName>UK &amp; Ireland</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>#N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsProhibited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-635 Extra field used for custom validation rule</description>
        <inlineHelpText>This is a read-only field, will be auto-populated when the country&apos;s LegalStatus changes to &quot;Prohibited&quot;.</inlineHelpText>
        <label>Is Prohibited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>SFDC1-7046: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>System ID referencing the source record Populated at Migration</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegalStatus__c</fullName>
        <description>SFDC1-620 This field indicates whether this country is sanctioned or prohibited by US government.</description>
        <inlineHelpText>Please select a legal status if needed.</inlineHelpText>
        <label>Legal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sanctioned</fullName>
                </value>
                <value>
                    <fullName>Prohibited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKIDCountry__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>Cty{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID Country/Territory</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Country/Territory</label>
    <listViews>
        <fullName>AllCountries</fullName>
        <columns>NAME</columns>
        <columns>CountryCode__c</columns>
        <columns>Region__c</columns>
        <columns>Geography__c</columns>
        <columns>LegalStatus__c</columns>
        <columns>IsProhibited__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Countries</label>
    </listViews>
    <listViews>
        <fullName>ProhibitedCountries</fullName>
        <columns>NAME</columns>
        <columns>CountryCode__c</columns>
        <columns>Region__c</columns>
        <columns>Geography__c</columns>
        <columns>LegalStatus__c</columns>
        <columns>IsProhibited__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LegalStatus__c</field>
            <operation>equals</operation>
            <value>Prohibited</value>
        </filters>
        <label>Prohibited Countries</label>
    </listViews>
    <listViews>
        <fullName>SanctionedCountries</fullName>
        <columns>NAME</columns>
        <columns>CountryCode__c</columns>
        <columns>Region__c</columns>
        <columns>Geography__c</columns>
        <columns>LegalStatus__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LegalStatus__c</field>
            <operation>equals</operation>
            <value>Sanctioned</value>
        </filters>
        <label>Sanctioned Countries</label>
    </listViews>
    <nameField>
        <label>Country/Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries/Territories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>